--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         node-version: '16'
 
     - name: Build dependencies
-      run: npm run build
+      run: npm install
 
     - name: Build application
       run: npm ci
